--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
+		"svelte-youtube-embed": "^0.1.8",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
